Completed lab, some confusion on the application of useState

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.page {
+  background-color: gray;
+  width:100px;
+  height:100px;
+}
